Add testing of AMR rendering
AMR rendering has been available for a while, but it has not been well
tested. Update the testing infrastructure to render partitioned
datasets and exercise this in some capacity.

--- a/viskores/source/testing/CMakeLists.txt
+++ b/viskores/source/testing/CMakeLists.txt
@@ -30,6 +30,7 @@ if (Viskores_ENABLE_RENDERING)
   list(APPEND libraries viskores_rendering_testing viskores_filter_contour)
 
   list(APPEND unit_tests
+    RenderTestAmrSource.cxx
     RenderTestPerlinNoise.cxx
     )
 endif()
