--- a/viskores/exec/CMakeLists.txt
+++ b/viskores/exec/CMakeLists.txt
@@ -42,6 +42,7 @@ set(headers
   ParametricCoordinates.h
   PointLocatorSparseGrid.h
   TaskBase.h
+  SplineEvaluateStructuredGrid.h
   Variant.h
   )
 
