--- a/viskores/exec/testing/CMakeLists.txt
+++ b/viskores/exec/testing/CMakeLists.txt
@@ -41,5 +41,6 @@ set(unit_tests
   UnitTestTaskSingular.cxx
   UnitTestVariant.cxx
   UnitTestWorkletInvokeFunctor.cxx
+  UnitTestSplineEvaluateStructuredGrid.cxx
   )
 viskores_unit_tests(SOURCES ${unit_tests})
