--- a/viskores/cont/testing/CMakeLists.txt
+++ b/viskores/cont/testing/CMakeLists.txt
@@ -127,6 +127,7 @@ set(unit_tests_device
   UnitTestTransportCellSetIn.cxx
   UnitTestTransportExecObject.cxx
   UnitTestTransportWholeArray.cxx
+  UnitTestSplineEvaluate.cxx
   )
 if(TARGET viskores_filter_field_conversion)
   list(APPEND unit_tests_device
