--- a/viskores/cont/testing/CMakeLists.txt
+++ b/viskores/cont/testing/CMakeLists.txt
@@ -119,6 +119,7 @@ set(unit_tests_device
   UnitTestDeviceAdapterAlgorithmDependency.cxx
   UnitTestHints.cxx
   UnitTestImplicitFunction.cxx
+  UnitTestArrayHandleIsMonotonic.cxx
   UnitTestParticleArrayCopy.cxx
   UnitTestPointLocatorSparseGrid.cxx
   UnitTestTransportArrayIn.cxx
@@ -127,6 +128,7 @@ set(unit_tests_device
   UnitTestTransportCellSetIn.cxx
   UnitTestTransportExecObject.cxx
   UnitTestTransportWholeArray.cxx
+  UnitTestSplineEvaluate.cxx
   )
 if(TARGET viskores_filter_field_conversion)
   list(APPEND unit_tests_device
