--- a/viskores/exec/CMakeLists.txt
+++ b/viskores/exec/CMakeLists.txt
@@ -42,6 +42,8 @@ set(headers
   ParametricCoordinates.h
   PointLocatorSparseGrid.h
   TaskBase.h
+  SplineEvaluateRectilinearGrid.h
+  SplineEvaluateUniformGrid.h
   Variant.h
   )
 
