--- a/examples/mesh_quality/CMakeLists.txt
+++ b/examples/mesh_quality/CMakeLists.txt
@@ -27,7 +27,7 @@
 ##  this software.
 ##
 ##=============================================================================
-cmake_minimum_required(VERSION 3.12...3.15 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.15 FATAL_ERROR)
 project(MeshQuality CXX)
 
 #Find the Viskores package
