--- a/examples/lagrangian_structures/CMakeLists.txt
+++ b/examples/lagrangian_structures/CMakeLists.txt
@@ -17,7 +17,7 @@
 ##  PURPOSE.  See the above copyright notice for more information.
 ##
 ##=============================================================================
-cmake_minimum_required(VERSION 3.12...3.15 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.15 FATAL_ERROR)
 project(ParticleAdvection CXX)
 
 #Find the Viskores package
