--- a/examples/smoke_test/CMakeLists.txt
+++ b/examples/smoke_test/CMakeLists.txt
@@ -16,7 +16,7 @@
 ##  PURPOSE.  See the above copyright notice for more information.
 ##============================================================================
 
-cmake_minimum_required(VERSION 3.12...3.15 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.15 FATAL_ERROR)
 project(ViskoresSmokeTest CXX)
 include(CTest)
 
