--- a/examples/temporal_advection/CMakeLists.txt
+++ b/examples/temporal_advection/CMakeLists.txt
@@ -17,7 +17,7 @@
 ##============================================================================
 
 #Find the Viskores package
-cmake_minimum_required(VERSION 3.12...3.15 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.15 FATAL_ERROR)
 project(TemporalAdvection CXX)
 
 #Find the Viskores package
