pkgconfig: correct installation path
(cherry picked from commit dee84b1c35ad9f0f37dbad9865ee0cbca07901ad)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -429,7 +429,7 @@ install(FILES ${Viskores_BINARY_DIR}/config/viskores_config.mk
 configure_file(${Viskores_SOURCE_DIR}/config/viskores.pc.in
   ${Viskores_BINARY_DIR}/config/viskores.pc @ONLY)
 install(FILES ${Viskores_BINARY_DIR}/config/viskores.pc
-  DESTINATION ${Viskores_INSTALL_SHARE_DIR}
+  DESTINATION ${Viskores_INSTALL_LIB_DIR}/pkgconfig
   )
 
 include(ViskoresInstallCMakePackage)
