--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,11 +52,11 @@ determine_version(${Viskores_SOURCE_DIR} ${GIT_EXECUTABLE} "Viskores")
 if (NOT DEFINED Viskores_INSTALL_INCLUDE_DIR)
   set(Viskores_INSTALL_INCLUDE_DIR "include/viskores-${Viskores_VERSION_MAJOR}.${Viskores_VERSION_MINOR}")
 endif()
-if (NOT DEFINED Viskores_INSTALL_CONFIG_DIR)
-  set(Viskores_INSTALL_CONFIG_DIR "lib/cmake/viskores-${Viskores_VERSION_MAJOR}.${Viskores_VERSION_MINOR}")
-endif()
 if (NOT DEFINED Viskores_INSTALL_LIB_DIR)
   set(Viskores_INSTALL_LIB_DIR "lib")
+endif()
+if (NOT DEFINED Viskores_INSTALL_CONFIG_DIR)
+  set(Viskores_INSTALL_CONFIG_DIR "${Viskores_INSTALL_LIB_DIR}/cmake/viskores-${Viskores_VERSION_MAJOR}.${Viskores_VERSION_MINOR}")
 endif()
 if (NOT DEFINED Viskores_INSTALL_BIN_DIR)
   set(Viskores_INSTALL_BIN_DIR "bin")
