--- a/viskores/cont/internal/DefaultTypesVTK.h.in
+++ b/viskores/cont/internal/DefaultTypesVTK.h.in
@@ -41,23 +41,24 @@ namespace toviskores
 //------------------------------------------------------------------------------
 // All scalar types in vtkType.h
 using VTKScalarTypes = viskores::List< //
-  signed char,                     //
-  unsigned char,                   //
-  short,                           //
-  unsigned short,                  //
-  int,                             //
-  unsigned int,                    //
-  long long,                       //
-  unsigned long long,              //
-  float,                           //
-  double,                          //
-  char,                            //
-  long,                            //
-  unsigned long                    //
+  signed char,                         //
+  unsigned char,                       //
+  short,                               //
+  unsigned short,                      //
+  int,                                 //
+  unsigned int,                        //
+  long long,                           //
+  unsigned long long,                  //
+  float,                               //
+  double,                              //
+  char,                                //
+  long,                                //
+  unsigned long                        //
   >;
 
 using SpecialGradientOutTypes =
-  viskores::List<viskores::Vec<viskores::Vec<viskores::Float32, 3>, 3>, viskores::Vec<viskores::Vec<viskores::Float64, 3>, 3> >;
+  viskores::List<viskores::Vec<viskores::Vec<viskores::Float32, 3>, 3>,
+                 viskores::Vec<viskores::Vec<viskores::Float64, 3>, 3>>;
 
 using FieldTypeInVTK = viskores::ListAppend<viskores::TypeListVecCommon, VTKScalarTypes>;
 
@@ -65,8 +66,9 @@ using FieldTypeOutVTK =
   viskores::ListAppend<viskores::TypeListVecCommon, SpecialGradientOutTypes, VTKScalarTypes>;
 
 //------------------------------------------------------------------------------
-using CellListStructuredInVTK =
-  viskores::List<viskores::cont::CellSetStructured<3>, viskores::cont::CellSetStructured<2>, viskores::cont::CellSetStructured<1> >;
+using CellListStructuredInVTK = viskores::List<viskores::cont::CellSetStructured<3>,
+                                               viskores::cont::CellSetStructured<2>,
+                                               viskores::cont::CellSetStructured<1>>;
 using CellListStructuredOutVTK = CellListStructuredInVTK;
 
 // vtkCellArray may use either 32 or 64 bit arrays to hold connectivity/offset
@@ -76,56 +78,63 @@ using Int32AOSHandle = viskores::cont::ArrayHandle<viskores::Int32>;
 using Int32AsIdAOSHandle = viskores::cont::ArrayHandleCast<viskores::Id, Int32AOSHandle>;
 using Int32AsIdAOSStorage = typename Int32AsIdAOSHandle::StorageTag;
 
-using CellSetExplicit32Bit = viskores::cont::CellSetExplicit<viskores::cont::StorageTagBasic,
-  Int32AsIdAOSStorage, Int32AsIdAOSStorage>;
+using CellSetExplicit32Bit = viskores::cont::
+  CellSetExplicit<viskores::cont::StorageTagBasic, Int32AsIdAOSStorage, Int32AsIdAOSStorage>;
 using CellSetExplicit64Bit = viskores::cont::CellSetExplicit<viskores::cont::StorageTagBasic,
-  viskores::cont::StorageTagBasic, viskores::cont::StorageTagBasic>;
+                                                             viskores::cont::StorageTagBasic,
+                                                             viskores::cont::StorageTagBasic>;
 using CellSetSingleType32Bit = viskores::cont::CellSetSingleType<Int32AsIdAOSStorage>;
 using CellSetSingleType64Bit = viskores::cont::CellSetSingleType<viskores::cont::StorageTagBasic>;
 #else  // VISKORES_USE_64BIT_IDS
-using Int64AOSHandle = viskores::cont::ArrayHandle<viskores::Int64, viskores::cont::StorageTagBasic>;
+using Int64AOSHandle =
+  viskores::cont::ArrayHandle<viskores::Int64, viskores::cont::StorageTagBasic>;
 using Int64AsIdAOSHandle = viskores::cont::ArrayHandleCast<viskores::Id, Int64AOSHandle>;
 using Int64AsIdAOSStorage = typename Int64AsIdAOSHandle::StorageTag;
 
 using CellSetExplicit32Bit = viskores::cont::CellSetExplicit<viskores::cont::StorageTagBasic,
-  viskores::cont::StorageTagBasic, viskores::cont::StorageTagBasic>;
-using CellSetExplicit64Bit = viskores::cont::CellSetExplicit<viskores::cont::StorageTagBasic,
-  Int64AsIdAOSStorage, Int64AsIdAOSStorage>;
+                                                             viskores::cont::StorageTagBasic,
+                                                             viskores::cont::StorageTagBasic>;
+using CellSetExplicit64Bit = viskores::cont::
+  CellSetExplicit<viskores::cont::StorageTagBasic, Int64AsIdAOSStorage, Int64AsIdAOSStorage>;
 using CellSetSingleType32Bit = viskores::cont::CellSetSingleType<viskores::cont::StorageTagBasic>;
 using CellSetSingleType64Bit = viskores::cont::CellSetSingleType<Int64AsIdAOSStorage>;
 #endif // VISKORES_USE_64BIT_IDS
 
 //------------------------------------------------------------------------------
 using CellListUnstructuredInVTK = viskores::List< //
-  CellSetExplicit32Bit,                       //
-  CellSetExplicit64Bit,                       //
-  CellSetSingleType32Bit,                     //
-  CellSetSingleType64Bit,                     //
+  CellSetExplicit32Bit,                           //
+  CellSetExplicit64Bit,                           //
+  CellSetSingleType32Bit,                         //
+  CellSetSingleType64Bit,                         //
   viskores::cont::CellSetExtrude                  //
   >;
 
-using CellListUnstructuredOutVTK = viskores::List<                     //
-  viskores::cont::CellSetExplicit<>,                                   //
-  viskores::cont::CellSetSingleType<>,                                 //
-  CellSetExplicit32Bit,                                            //
-  CellSetExplicit64Bit,                                            //
-  CellSetSingleType32Bit,                                          //
-  CellSetSingleType64Bit                                           //
+using CellListUnstructuredOutVTK = viskores::List< //
+  viskores::cont::CellSetExplicit<>,               //
+  viskores::cont::CellSetSingleType<>,             //
+  CellSetExplicit32Bit,                            //
+  CellSetExplicit64Bit,                            //
+  CellSetSingleType32Bit,                          //
+  CellSetSingleType64Bit                           //
   >;
 
 //------------------------------------------------------------------------------
 using CellListAllInVTK = viskores::ListAppend<CellListStructuredInVTK, CellListUnstructuredInVTK>;
-using CellListAllOutVTK = viskores::ListAppend<CellListStructuredOutVTK, CellListUnstructuredOutVTK>;
+using CellListAllOutVTK =
+  viskores::ListAppend<CellListStructuredOutVTK, CellListUnstructuredOutVTK>;
 
 #ifdef VISKORES_ADD_XGC_DEFAULT_TYPES
-using StorageListCoordinates = viskores::ListAppend<
-  viskores::List<viskores::cont::StorageTagXGCCoordinates>,
-  viskores::cont::StorageListCoordinates>;
+using StorageListCoordinates =
+  viskores::ListAppend<viskores::List<viskores::cont::StorageTagXGCCoordinates>,
+                       viskores::cont::StorageListCoordinates>;
 #endif
 
 } // end namespace toviskores
 
-#define VISKORES_DEFAULT_TYPE_LIST ::toviskores::FieldTypeInVTK
+// Viskores is better at using "unknown" value types in fields, so we shouldn't need to
+// declare a huge list.
+// #define VISKORES_DEFAULT_TYPE_LIST ::toviskores::FieldTypeInVTK
+
 #define VISKORES_DEFAULT_CELL_SET_LIST_STRUCTURED ::toviskores::CellListStructuredInVTK
 #define VISKORES_DEFAULT_CELL_SET_LIST_UNSTRUCTURED ::toviskores::CellListUnstructuredInVTK
 
