Shift old files over

--- a/viskores/filter/uncertainty/CMakeLists.txt
+++ b/viskores/filter/uncertainty/CMakeLists.txt
@@ -19,10 +19,14 @@
 set(uncertainty_headers
   ContourUncertainUniform.h
   ContourUncertainUniformMonteCarlo.h
+  #2 Variate Data
+  2VariateUncertianty.h
   )
 set(uncertainty_sources_device
   ContourUncertainUniform.cxx
   ContourUncertainUniformMonteCarlo.cxx
+  #2 Variate 
+  2VariateUncertianty.cxx
   )
 
 viskores_library(
