Upload patch when formatting fails
To ensure that the Viskores source maintains consistent formatting, every GitHub
pull request must pass a formatting check. If this check fails, developers must
change their code to conform to the proper formatting.

To assist developers in correcting the formatting, the GitHub workflow now
updates a patch file as an artifact. When developers get the formatting failure,
they can go to the output of the check and download the patch file and apply it
locally to fix the formatting issues.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,8 +39,15 @@ jobs:
       - uses: actions/checkout@v4
       - name: Mark repository as safe
         run: git config --global --add safe.directory "${GITHUB_WORKSPACE}"
-      - name: CXX
+      - name: Check formatting
         run: ./Utilities/Scripts/format.bash
+      - name: Upload format patch
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: formatting-patch
+          path: ./format.patch
+          if-no-files-found: ignore
 
   windows:
     needs: format
