Add fiber uncertainty vis filter

--- a/viskores/filter/uncertainty/CMakeLists.txt
+++ b/viskores/filter/uncertainty/CMakeLists.txt
@@ -19,10 +19,13 @@
 set(uncertainty_headers
   ContourUncertainUniform.h
   ContourUncertainUniformMonteCarlo.h
+  FiberUncertainUniform.h
   )
+
 set(uncertainty_sources_device
   ContourUncertainUniform.cxx
   ContourUncertainUniformMonteCarlo.cxx
+  FiberUncertainUniform.cxx
   )
 
 viskores_library(
@@ -31,3 +34,5 @@ viskores_library(
   DEVICE_SOURCES ${uncertainty_sources_device}
   USE_VISKORES_JOB_POOL
 )
+
+add_subdirectory(worklet)
