Restrict workflow permissions to minimum required
Limiting the scope of the GITHUB_TOKEN via the [permissions](https://docs.github.com/en/actions/reference/workflows-and-actions/workflow-syntax#permissions) attribute is best practice to prevent a leaked GITHUB_TOKEN from allowing repository write access.

--- a/.github/workflows/external.yml
+++ b/.github/workflows/external.yml
@@ -11,7 +11,9 @@ on:
   push:
   pull_request_target:
 
-permissions: write-all
+permissions:
+  contents: read
+  statuses: write
 
 jobs:
   generate_statuses:
