--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -14,6 +14,9 @@ on:
       - 'release**'
   pull_request:
 
+permissions:
+  contents: read
+
 concurrency:
   group: doxygen-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
